--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -84,7 +84,7 @@
               <!-- End Form Group -->
 
               <button
-                type="button"
+                type="submit"
                 [disabled]="loginForm.invalid"
                 class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
               >
