--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -4,17 +4,12 @@
     <!-- Hero -->
     <div class="relative">
       <!-- Gradients -->
-      <div aria-hidden="true" class="flex absolute -top-48 start-0 -z-[1]">
-        <div
-          class="bg-purple-200 opacity-30 blur-3xl w-[1036px] h-[600px] dark:bg-purple-900 dark:opacity-20"
-        ></div>
-        <div
-          class="bg-slate-200 opacity-90 blur-3xl w-[577px] h-[300px] transform translate-y-32 dark:bg-slate-800/60"
-        ></div>
-      </div>
+
       <!-- End Gradients -->
 
-      <div class="max-w-[85rem] px-4 pt-10 sm:px-6 lg:px-8 lg:pt-14 mx-auto">
+      <div
+        class="max-w-[85rem] px-4 pt-10 sm:px-6 lg:px-8 lg:pt-14 mx-auto z-10"
+      >
         <!-- Title -->
         <div class="max-w-2xl mx-auto text-center mb-10">
           <h2
