--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,18 +37,6 @@
           aria-current="page"
           >Landing</a
         >
-        <a
-          class="font-medium text-gray-500"
-          routerLink="/products"
-          routerLinkActive="text-blue-600 md:py-6 dark:text-blue-500"
-          >Products</a
-        >
-        <a
-          class="font-medium text-gray-500"
-          routerLink="/categories"
-          routerLinkActive="text-blue-600 md:py-6 dark:text-blue-500"
-          >Categories</a
-        >
 
         @if(!user ){<a
           class="flex items-center gap-x-2 font-medium text-gray-500 hover:text-blue-600 md:border-s md:border-gray-300 md:my-6 md:ps-6 dark:border-gray-700 dark:text-gray-400 dark:hover:text-blue-500 cursor-pointer"
@@ -64,6 +52,24 @@
           <i class="pi pi-user"></i>
           Log in </a
         >} @if (user ) {
+        <a
+          class="font-medium text-gray-500"
+          routerLink="/products"
+          routerLinkActive="text-blue-600 md:py-6 dark:text-blue-500"
+          >Products</a
+        >
+        <a
+          class="font-medium text-gray-500"
+          routerLink="/add-products"
+          routerLinkActive="text-blue-600 md:py-6 dark:text-blue-500"
+          >Mange Products</a
+        >
+        <a
+          class="font-medium text-gray-500"
+          routerLink="/categories"
+          routerLinkActive="text-blue-600 md:py-6 dark:text-blue-500"
+          >Categories</a
+        >
         <p
           type="button"
           class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-100 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-white dark:hover:bg-gray-700 dark:hover:text-gray-300 dark:focus:bg-gray-700"
