--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -17,6 +17,8 @@
   </div>
 
   <!-- Buttons -->
+
+  @if(!user){
   <div class="text-center">
     <a
       class="inline-flex justify-center items-center gap-x-3 text-center bg-gradient-to-tl from-blue-600 to-violet-600 shadow-lg shadow-transparent hover:shadow-blue-700/50 border border-transparent text-white text-sm font-medium rounded-full focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white py-3 px-6 dark:focus:ring-offset-gray-800"
@@ -26,6 +28,18 @@
       <i class="pi pi-angle-right"></i>
     </a>
   </div>
+  } @else {
+  <div class="text-center">
+    <a
+      class="inline-flex justify-center items-center gap-x-3 text-center bg-gradient-to-tl from-blue-600 to-violet-600 shadow-lg shadow-transparent hover:shadow-blue-700/50 border border-transparent text-white text-sm font-medium rounded-full focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white py-3 px-6 dark:focus:ring-offset-gray-800"
+      routerLink="/products"
+    >
+      Welcome
+      <i class="pi pi-angle-right"></i>
+    </a>
+  </div>
+  }
+
   <!-- End Buttons -->
 </div>
 
