--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -32,15 +32,25 @@
           <div
             class="flex flex-col bg-white border border-gray-200 text-center rounded-2xl p-4 md:p-8 dark:bg-slate-900 dark:border-gray-700"
           >
+            <img
+              src="https://source.unsplash.com/200x200/?{{
+                item.categorie.name
+              }}"
+              class="w-40 h-40 mx-auto my-2 rounded-lg"
+              alt="Product Image"
+            />
+
             <h4 class="font-medium text-lg text-gray-800 dark:text-gray-200">
+              <span class="font-bold text-blue-400">Category:</span>
               {{ item.categorie.name }}
             </h4>
             <span
               class="mt-7 font-bold text-3xl md:text-4xl xl:text-5xl text-gray-800 dark:text-gray-200"
               >{{ item.prix }}$</span
             >
-            <p class="mt-2 text-sm text-gray-500">
-              Get started with basic features
+            <p class="mt-2 text-sm text-gray-500">{{ item.qte }} items left</p>
+            <p class="mt-2 text-md-start text-2xl text-slate-300">
+              {{ item.lib | uppercase }}
             </p>
 
             <ul class="mt-7 space-y-2.5 text-sm">
@@ -66,65 +76,64 @@
 
             <a
               class="mt-5 py-3 px-4 w-full inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-violet-600 text-violet-600 hover:border-violet-500 hover:text-violet-500 disabled:opacity-50 disabled:pointer-events-none dark:border-violet-500 dark:text-violet-500 dark:hover:text-violet-400 dark:hover:border-violet-400 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
-              href="#"
+              data-hs-overlay="#hs-basic-modal"
             >
-              Get started
+              Buy Now
             </a>
+
+            <div
+              id="hs-basic-modal"
+              class="hs-overlay hs-overlay-open:opacity-100 hs-overlay-open:duration-500 hidden w-full h-full fixed top-0 start-0 z-[60] opacity-0 overflow-x-hidden transition-all overflow-y-auto pointer-events-none"
+            >
+              <div
+                class="hs-overlay-open:opacity-100 hs-overlay-open:duration-500 opacity-0 transition-all sm:max-w-lg sm:w-full m-3 sm:mx-auto"
+              >
+                <div
+                  class="flex flex-col bg-white border shadow-sm rounded-xl pointer-events-auto dark:bg-gray-800 dark:border-gray-700 dark:shadow-slate-700/[.7]"
+                >
+                  <div
+                    class="flex justify-between items-center py-3 px-4 border-b dark:border-gray-700"
+                  >
+                    <h3 class="font-bold text-gray-800 dark:text-white">
+                      Confirmation
+                    </h3>
+                    <button
+                      type="button"
+                      class="flex justify-center items-center w-7 h-7 text-sm font-semibold rounded-full border border-transparent text-gray-800 hover:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-gray-700 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                      data-hs-overlay="#hs-basic-modal"
+                    >
+                      <span class="sr-only">Close</span>
+                    </button>
+                  </div>
+                  <div class="p-4 overflow-y-auto">
+                    <p class="mt-1 text-gray-800 dark:text-gray-400">
+                      Are you sure you want to buy this product?
+                    </p>
+                  </div>
+                  <div
+                    class="flex justify-end items-center gap-x-2 py-3 px-4 border-t dark:border-gray-700"
+                  >
+                    <button
+                      type="button"
+                      class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                      data-hs-overlay="#hs-basic-modal"
+                    >
+                      Close
+                    </button>
+                    <button
+                      type="button"
+                      data-hs-overlay="#hs-basic-modal"
+                      class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-green-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                      (click)="buy()"
+                    >
+                      Proceed to checkout
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           }
-
-          <!-- End Card -->
-
-          <!-- Card -->
-          <!-- <div
-            class="flex flex-col bg-white border-2 border-violet-900 text-center shadow-xl rounded-2xl p-4 md:p-8 dark:bg-slate-900 dark:border-violet-700"
-          >
-            <p class="mb-3">
-              <span
-                class="inline-flex items-center gap-1.5 py-1.5 px-3 rounded-lg text-xs uppercase font-semibold bg-violet-100 text-violet-800 dark:bg-violet-900 dark:text-white"
-                >Most popular</span
-              >
-            </p>
-            <h4 class="font-medium text-lg text-gray-800 dark:text-gray-200">
-              Startup
-            </h4>
-            <span
-              class="mt-5 font-bold text-3xl md:text-4xl xl:text-5xl text-gray-800 dark:text-gray-200"
-            >
-              $39
-            </span>
-            <p class="mt-2 text-sm text-gray-500">
-              All the basics for starting a new business
-            </p>
-
-            <ul class="mt-7 space-y-2.5 text-sm">
-              <li class="flex space-x-2">
-                <i class="pi pi-check text-blue-600"></i>
-                <span class="text-gray-800 dark:text-gray-400"> 2 users </span>
-              </li>
-
-              <li class="flex space-x-2">
-                <i class="pi pi-check text-blue-600"></i>
-                <span class="text-gray-800 dark:text-gray-400">
-                  Plan features
-                </span>
-              </li>
-
-              <li class="flex space-x-2">
-                <i class="pi pi-check text-blue-600"></i>
-                <span class="text-gray-800 dark:text-gray-400">
-                  Product support
-                </span>
-              </li>
-            </ul>
-
-            <a
-              class="mt-5 py-3 px-4 w-full inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-violet-600 text-white hover:bg-violet-700 disabled:opacity-50 disabled:pointer-events-none dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
-              href="https://github.com/htmlstreamofficial/preline/tree/main/examples/html"
-            >
-              Get started
-            </a>
-          </div> -->
           <!-- End Card -->
         </div>
         <!-- End Grid -->
@@ -198,7 +207,6 @@
               />
             </g>
           </svg>
-
           <svg
             class="w-16 h-16 md:w-20 md:h-20 lg:w-24 lg:h-24 mx-auto sm:mx-0 text-gray-500"
             viewBox="0 -8.881784197001252e-16 267.51517722360785 65.24679557585003"
