added categories section

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,11 +16,13 @@
       <div class="md:hidden">
         <button
           type="button"
-          class="hs-collapse-toggle w-8 h-8 flex justify-center items-center text-sm font-semibold rounded-full border border-gray-200 text-gray-800 hover:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+          class="hs-collapse-toggle w-8 h-8 flex justify-center items-center text-sm font-semibold rounded-full border border-gray-200 text-white hover:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
           data-hs-collapse="#navbar-collapse-with-animation"
           aria-controls="navbar-collapse-with-animation"
           aria-label="Toggle navigation"
-        ></button>
+        >
+          <i class="pi pi-bars"></i>
+        </button>
       </div>
     </div>
     <div
@@ -70,21 +72,43 @@
           routerLinkActive="text-blue-600 md:py-6 dark:text-blue-500"
           >Categories</a
         >
-        <p
-          type="button"
-          class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-100 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-white dark:hover:bg-gray-700 dark:hover:text-gray-300 dark:focus:bg-gray-700"
-        >
-          <i class="pi pi-user"></i>
-          {{ user }}
-        </p>
-        <Button
-          type="button"
-          class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-100 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-red-500 dark:hover:bg-red-700 dark:hover:text-gray-300 dark:focus:bg-gray-700"
-          (click)="logout()"
-        >
-          <i class="pi pi-sign-out"></i>
-          Sign out
-        </Button>
+        <div class="card flex justify-content-center hs-dropdown z-50">
+          <Button
+            class="flex items-center gap-x-2 font-medium text-gray-500 hover:text-blue-600 md:border-s md:border-gray-300 md:my-6 md:ps-6 dark:border-gray-700 dark:text-gray-400 dark:hover:text-blue-500 cursor-pointer"
+          >
+            <i class="pi pi-user"></i>
+            {{ user }}
+          </Button>
+
+          <div
+            class="hs-dropdown-menu hidden transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 min-w-[15rem] bg-white shadow-md rounded-lg p-2 mt-2 divide-y divide-gray-200 dark:bg-gray-800 dark:border dark:border-gray-700 dark:divide-gray-700"
+            aria-labelledby="hs-dropdown-with-dividers"
+          >
+            <div class="py-2 first:pt-0 last:pb-0">
+              <a
+                class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-gray-300 dark:focus:bg-gray-700"
+                href="#"
+              >
+                Upgrade License
+              </a>
+            </div>
+            <div class="py-2 first:pt-0 last:pb-0">
+              <a
+                class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-gray-300 dark:focus:bg-gray-700"
+                href="#"
+              >
+                Account Settings
+              </a>
+              <Button
+                class="flex items-center w-full gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-100 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 dark:text-red-500 dark:hover:bg-gray-700 dark:hover:text-gray-300 dark:focus:bg-gray-700"
+                (click)="logout()"
+              >
+                <i class="pi pi-sign-out"></i>
+                Sign out
+              </Button>
+            </div>
+          </div>
+        </div>
         }
       </div>
     </div>
