--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -300,10 +300,59 @@
                     class="py-1 px-3 mr-2 text-lg font-medium bg-transparent border-cyan-400 border-2 text-cyan-400 rounded-2xl"
                     title="edit"
                     type="button"
+                    data-hs-overlay="#hs-slide-down-animation-modal"
+                    (click)="onEdit(item)"
                   >
                     <i class="pi pi-pencil"></i>
                     Edit
                   </button>
+                  <div
+                    id="hs-slide-down-animation-modal"
+                    class="hs-overlay hidden w-full h-full fixed top-0 start-0 z-[60] overflow-x-hidden overflow-y-auto pointer-events-none"
+                  >
+                    <div
+                      class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all sm:max-w-lg sm:w-full m-3 sm:mx-auto"
+                    >
+                      <div
+                        class="flex flex-col bg-white border shadow-sm rounded-xl pointer-events-auto dark:bg-gray-800 dark:border-gray-700 dark:shadow-slate-700/[.7]"
+                      >
+                        <div
+                          class="flex justify-between items-center py-3 px-4 border-b dark:border-gray-700"
+                        >
+                          <h3 class="font-bold text-gray-800 dark:text-white">
+                            Modal title
+                          </h3>
+                          <button
+                            type="button"
+                            class="flex justify-center items-center w-7 h-7 text-sm font-semibold rounded-full border border-transparent text-gray-800 hover:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-gray-700 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                            data-hs-overlay="#hs-slide-down-animation-modal"
+                          >
+                            <span class="sr-only">Close</span>
+                            <svg
+                              class="flex-shrink-0 w-4 h-4"
+                              xmlns="http://www.w3.org/2000/svg"
+                              width="24"
+                              height="24"
+                              viewBox="0 0 24 24"
+                              fill="none"
+                              stroke="currentColor"
+                              stroke-width="2"
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                            >
+                              <path d="M18 6 6 18" />
+                              <path d="m6 6 12 12" />
+                            </svg>
+                          </button>
+                        </div>
+                        <div class="p-4 overflow-y-auto">
+                          <p class="mt-1 text-gray-800 dark:text-gray-400">
+                            <app-edit-categories />
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                   <button
                     class="py-1 px-3 text-lg font-medium bg-transparent border-red-500 border-2 text-red-500 rounded-2xl"
                     title="delete"
