Update dropdown menu styling and grid layout

--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -84,7 +84,7 @@
                 </span>
               </button>
               <div
-                class="hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden mt-2 divide-y divide-gray-200 min-w-[12rem] z-10 bg-white shadow-md rounded-lg mt-2 dark:divide-gray-700 dark:bg-gray-800 dark:border dark:border-gray-700"
+                class="hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden divide-y divide-gray-200 min-w-[12rem] z-10 bg-white shadow-md rounded-lg mt-2 dark:divide-gray-700 dark:bg-gray-800 dark:border dark:border-gray-700"
                 aria-labelledby="hs-as-table-table-filter-dropdown"
               >
                 <div class="divide-y divide-gray-200 dark:divide-gray-700">
