--- a/src/app/add-products/add-products.component.html
+++ b/src/app/add-products/add-products.component.html
@@ -64,43 +64,30 @@
             <div class="grid grid-cols-1 gap-4 lg:gap-6">
               <div>
                 <label
-                  for="hs-email-contacts-1"
-                  class="block mb-2 text-sm text-gray-700 font-medium dark:text-white"
+                  for="hs-input-with-leading-and-trailing-icon"
+                  class="block text-sm font-medium mb-2 dark:text-white"
                   >Price</label
                 >
                 <!-- Input Number -->
-                <div
-                  class="bg-white border border-gray-200 rounded-lg dark:bg-slate-700 dark:border-gray-700"
-                  data-hs-input-number
-                >
-                  <div class="w-full flex justify-between items-center gap-x-1">
-                    <div class="grow py-2 px-3">
-                      <input
-                        class="w-full p-0 bg-transparent border-0 text-gray-800 focus:ring-0 dark:text-white"
-                        type="text"
-                        value="1"
-                        data-hs-input-number-input
-                        formControlName="prix"
-                      />
+                <div>
+                  <div class="relative">
+                    <input
+                      type="number"
+                      formControlName="prix"
+                      id="hs-input-with-leading-and-trailing-icon"
+                      name="hs-input-with-leading-and-trailing-icon"
+                      class="py-3 px-4 ps-9 pe-16 block w-full border-gray-200 shadow-sm rounded-lg text-sm focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-gray-400 dark:focus:ring-gray-600"
+                      placeholder="0.00"
+                    />
+                    <div
+                      class="absolute inset-y-0 start-0 flex items-center pointer-events-none z-20 ps-4"
+                    >
+                      <span class="text-gray-500">$</span>
                     </div>
                     <div
-                      class="flex items-center -gap-y-px divide-x divide-gray-200 border-s border-gray-200 dark:divide-gray-700 dark:border-gray-700"
+                      class="absolute inset-y-0 end-0 flex items-center pointer-events-none z-20 pe-4"
                     >
-                      <button
-                        type="button"
-                        class="w-10 h-10 inline-flex justify-center items-center gap-x-2 text-sm font-medium last:rounded-e-lg bg-white text-gray-800 hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
-                        data-hs-input-number-decrement
-                      >
-                        <i class="pi pi-minus"></i>
-                      </button>
-                      <button
-                        type="button"
-                        title="price"
-                        class="w-10 h-10 inline-flex justify-center items-center gap-x-2 text-sm font-medium last:rounded-e-lg bg-white text-gray-800 hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
-                        data-hs-input-number-increment
-                      >
-                        <i class="pi pi-plus"></i>
-                      </button>
+                      <span class="text-gray-500">USD</span>
                     </div>
                   </div>
                 </div>
@@ -122,7 +109,7 @@
                     <div class="grow py-2 px-3">
                       <input
                         class="w-full p-0 bg-transparent border-0 text-gray-800 focus:ring-0 dark:text-white"
-                        type="text"
+                        type="number"
                         value="1"
                         data-hs-input-number-input
                         formControlName="qte"
