--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<body class="flex h-full items-center py-16">
+<body class="flex h-screen pb-60 items-center py-16">
   <main class="w-full max-w-md mx-auto p-6">
     <div
       class="mt-7 bg-white border border-gray-200 rounded-xl shadow-sm dark:bg-gray-800 dark:border-gray-700"
