--- a/src/app/add-products/add-products.component.html
+++ b/src/app/add-products/add-products.component.html
@@ -110,7 +110,6 @@
                       <input
                         class="w-full p-0 bg-transparent border-0 text-gray-800 focus:ring-0 dark:text-white"
                         type="number"
-                        value="1"
                         data-hs-input-number-input
                         formControlName="qte"
                       />
@@ -120,6 +119,7 @@
                     >
                       <button
                         type="button"
+                        (click)="incrementQte()"
                         class="w-10 h-10 inline-flex justify-center items-center gap-x-2 text-sm font-medium last:rounded-e-lg bg-white text-gray-800 hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
                         data-hs-input-number-decrement
                       >
@@ -128,6 +128,8 @@
                       <button
                         type="button"
                         title="quantity"
+                        (click)="incrementQte()"
+
                         class="w-10 h-10 inline-flex justify-center items-center gap-x-2 text-sm font-medium last:rounded-e-lg bg-white text-gray-800 hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
                         data-hs-input-number-increment
                       >
